# weather-api

./: .coveragerc  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  mypy.ini  pyproject.toml
scripts/: __init__.py
tests/features/get_weather_info/: get_weather_info_test.py
tests/unit/app/weather/entities/: current_wealther_test.py  location_test.py  weather_info_test.py
tests/unit/app/weather/services/: weather_info_service_test.py
tests/unit/infra/open_weather_api/: open_weather_api_mapper_test.py
weather/: __init__.py  __main__.py
weather/app/weather/entities/: current_weather.py  location.py  wealther_info.py  weather_info.py
weather/app/weather/services/: wealther_info_service.py  weather_info_service.py
weather/config/: environment.py
weather/domain/entities/: location.py  weather_info.py
weather/infra/open_weather_api/: open_weather_api_mapper.py  open_weather_api_service.py
weather/infra/requests/: requests.py
weather/interfaces/: app.py
weather/interfaces/fastapi/: app.py
weather/interfaces/fastapi/api/: root.py
weather/interfaces/fastapi/api/weather/: __init__.py  weather_info.py
